# gcli2api

./: .env.example  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements-termux.txt  requirements.txt  test_antigravity_anthropic_messages.py  web.py
docs/: README_EN.md  antigravity文档.md
front/: common.js  control_panel.html  control_panel_mobile.html
src/: anthropic_converter.py  anthropic_streaming.py  anti_truncation.py  antigravity_anthropic_router.py  antigravity_api.py  antigravity_router.py  auth.py  credential_manager.py  gcli_chat_api.py  gemini_router.py  google_chat_api.py  google_oauth_api.py  httpx_client.py  models.py  openai_router.py  openai_transfer.py  state_manager.py  storage_adapter.py  task_manager.py  token_calibrator.py  token_estimator.py  utils.py  web_routes.py
src/storage/: cache_manager.py  mongodb_manager.py  sqlite_manager.py
